# coast_audio_native_codec

./: .metadata  README.md  ffigen.yaml  pubspec.yaml  update_miniaudio.sh
android/: build.gradle  proguard-rules.pro  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/coast_audio_native_codec/native_decoder/: build.gradle.kts
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  player_screen.dart
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
ios/: coast_audio_native_codec.podspec
ios/Classes/: coast_audio_native_codec.c
lib/: coast_audio_native_codec.dart
lib/src/: ca_codec_bindings_generated.dart  ca_decoder_callback.dart  ca_sample_format.dart  native_audio_buffer.dart  native_audio_codec.dart  native_audio_decoder.dart  native_audio_exception.dart  native_audio_format.dart
lib/src/bindings/: ca_codec_bindings_generated.dart
lib/src/decoder/: ca_decoder_callback.dart  native_audio_decoder.dart
lib/src/utils/: ca_result_extension.dart  four_cc.dart
macos/: coast_audio_native_codec.podspec
macos/Classes/: coast_audio_native_codec.c
src/: CMakeLists.txt  ca_decoder.c  ca_decoder.h  ca_defs.h
src/android/: native_decoder.c  native_decoder.h
src/darwin/: audio_file_stream.c  audio_file_stream.h
(+4 files in other folders)
